--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.container {
+/* .container {
   height: 100vh;
   display: flex;
   min-width: 260px;
   justify-content: center;
   align-items: center;
-}
+} */
