--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
-/* .container {
-  height: 100vh;
-  display: flex;
-  min-width: 260px;
-  justify-content: center;
-  align-items: center;
+label {
+  font-size: 0.8rem;
+}
+
+/* input.form-control,
+input.form-control:focus {
+  background: #f0f0ff;
 } */
+.error {
+  position: absolute;
+  color: red;
+  font-size: 0.7rem;
+}
+.background {
+  background-image: linear-gradient(to right, lightgray, white);
+}
